midn-userplane/builds/build_136/ebpf-build.txt
[1m[33mwarning[0m: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/runner/work/midn/midn/crates/midn-userplane-ebpf/Cargo.toml
workspace: /home/runner/work/midn/midn/Cargo.toml
[1m[92m   Compiling[0m midn-userplane v0.1.0 (/home/runner/work/midn/midn/crates/midn-userplane)
[1m[33mwarning[0m: midn-userplane@0.1.0: Compiling midn-userplane-ebpf via "/home/runner/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/bin/cargo" (bpfel-unknown-none)…
[1m[91merror[0m: failed to run custom build command for `midn-userplane v0.1.0 (/home/runner/work/midn/midn/crates/midn-userplane)`

Caused by:
  process didn't exit successfully: `/home/runner/work/midn/midn/target/debug/build/midn-userplane-0d1ca8e43c0320e6/build-script-build` (exit status: 1)
  --- stdout
  cargo:rerun-if-changed=../midn-userplane-ebpf/src/
  cargo:rerun-if-changed=build.rs
  cargo:warning=Compiling midn-userplane-ebpf via "/home/runner/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/bin/cargo" (bpfel-unknown-none)…

  --- stderr
  [1m[33mwarning[0m: profiles for the non root package will be ignored, specify profiles at the workspace root:
  package:   /home/runner/work/midn/midn/crates/midn-userplane-ebpf/Cargo.toml
  workspace: /home/runner/work/midn/midn/Cargo.toml
  [1m[92m Downloading[0m crates ...
  [1m[92m  Downloaded[0m camino v1.2.3
  [1m[92m  Downloaded[0m proc-macro2-diagnostics v0.10.1
  [1m[92m  Downloaded[0m anyhow v1.0.102
  [1m[92m  Downloaded[0m aya-ebpf v0.1.1
  [1m[92m  Downloaded[0m aya-build v0.1.3
  [1m[92m  Downloaded[0m aya-ebpf-cty v0.2.3
  [1m[92m  Downloaded[0m aya-ebpf-macros v0.1.2
  [1m[92m  Downloaded[0m aya-log-parser v0.1.13
  [1m[92m  Downloaded[0m serde_json v1.0.150
  [1m[92m  Downloaded[0m cargo-platform v0.3.3
  [1m[92m  Downloaded[0m cargo_metadata v0.23.1
  [1m[92m  Downloaded[0m aya-ebpf-bindings v0.1.2
  [1m[92m  Downloaded[0m aya-log-ebpf-macros v0.1.0
  [1m[92m  Downloaded[0m aya-log-ebpf v0.1.0
  [1m[92m    Updating[0m crates.io index
  [1m[92m Downloading[0m crates ...
  [1m[92m  Downloaded[0m addr2line v0.25.1
  [1m[92m  Downloaded[0m adler2 v2.0.1
  [1m[92m  Downloaded[0m rustc-literal-escaper v0.0.7
  [1m[92m  Downloaded[0m getopts v0.2.24
  [1m[92m  Downloaded[0m foldhash v0.2.0
  [1m[92m  Downloaded[0m miniz_oxide v0.8.9
  [1m[92m  Downloaded[0m rustc-demangle v0.1.27
  [1m[92m  Downloaded[0m memchr v2.7.6
  [1m[92m  Downloaded[0m gimli v0.32.3
  [1m[92m  Downloaded[0m object v0.37.3
  [1m[92m  Downloaded[0m libc v0.2.185
  [1m[92m   Compiling[0m proc-macro2 v1.0.106
  [1m[92m   Compiling[0m unicode-ident v1.0.24
  [1m[92m   Compiling[0m quote v1.0.45
  [1m[92m   Compiling[0m serde_core v1.0.228
  [1m[92m   Compiling[0m syn v2.0.118
  [1m[92m   Compiling[0m zmij v1.0.21
  [1m[92m   Compiling[0m serde v1.0.228
  [1m[92m   Compiling[0m camino v1.2.3
  [1m[92m   Compiling[0m serde_json v1.0.150
  [1m[92m   Compiling[0m rustversion v1.0.22
  [1m[92m   Compiling[0m thiserror v2.0.18
  [1m[92m   Compiling[0m anyhow v1.0.102
  [1m[92m   Compiling[0m compiler_builtins v0.1.160 (/home/runner/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/compiler-builtins/compiler-builtins)
  [1m[92m   Compiling[0m itoa v1.0.18
  [1m[92m   Compiling[0m memchr v2.8.2
  [1m[92m   Compiling[0m serde_derive v1.0.228
  [1m[92m   Compiling[0m thiserror-impl v2.0.18
  [1m[92m   Compiling[0m semver v1.0.28
  [1m[92m   Compiling[0m cargo-platform v0.3.3
  [1m[92m   Compiling[0m num_enum_derive v0.7.6
  [1m[92m   Compiling[0m cargo_metadata v0.23.1
  [1m[92m   Compiling[0m core v0.0.0 (/home/runner/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core)
  [1m[92m   Compiling[0m aya-build v0.1.3
  [1m[92m   Compiling[0m version_check v0.9.5
  [1m[92m   Compiling[0m proc-macro2-diagnostics v0.10.1
  [1m[92m   Compiling[0m aya-ebpf-cty v0.2.3
  [1m[92m   Compiling[0m aya-ebpf-bindings v0.1.2
  [1m[92m   Compiling[0m num_enum v0.7.6
  [1m[92m   Compiling[0m aya-log-common v0.1.15
  [1m[92m   Compiling[0m aya-ebpf v0.1.1
  [1m[92m   Compiling[0m aya-ebpf-macros v0.1.2
  [1m[92m   Compiling[0m aya-log-parser v0.1.13
  [1m[92m   Compiling[0m aya-log-ebpf-macros v0.1.0
  [1m[92m   Compiling[0m aya-log-ebpf v0.1.0
  [1m[92m   Compiling[0m midn-userplane-ebpf v0.1.0 (/home/runner/work/midn/midn/crates/midn-userplane-ebpf)
  [1m[91merror[E0308][0m[1m: mismatched types[0m
     [1m[94m--> [0mcrates/midn-userplane-ebpf/src/gtp_xdp.rs:209:56
      [1m[94m|[0m
  [1m[94m209[0m [1m[94m|[0m     if unsafe { aya_ebpf::helpers::bpf_xdp_adjust_head(ctx.as_ptr(), strip) } < 0 {
      [1m[94m|[0m                 [1m[94m--------------------------------------[0m [1m[91m^^^^^^^^^^^^[0m [1m[91mexpected `*mut xdp_md`, found `*mut c_void`[0m
      [1m[94m|[0m                 [1m[94m|[0m
      [1m[94m|[0m                 [1m[94marguments to this function are incorrect[0m
      [1m[94m|[0m
      [1m[94m= [0m[1mnote[0m: expected raw pointer `[1m[35m*mut xdp_md[0m`
                 found raw pointer `[1m[35m*mut c_void[0m`
  [1m[92mnote[0m: function defined here
     [1m[94m--> [0m/home/runner/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/aya-ebpf-bindings-0.1.2/src/x86_64/helpers.rs:396:15
      [1m[94m|[0m
  [1m[94m396[0m [1m[94m|[0m pub unsafe fn bpf_xdp_adjust_head(
      [1m[94m|[0m               [1m[92m^^^^^^^^^^^^^^^^^^^[0m

  [1mFor more information about this error, try `rustc --explain E0308`.[0m
  [1m[91merror[0m: could not compile `midn-userplane-ebpf` (bin "midn-userplane-ebpf") due to 1 previous error
  Error: "midn-userplane-ebpf compilation failed.\nEnsure the following are installed:\n  rustup toolchain install nightly --component rust-src\n  cargo install bpf-linker"
